@@ -1,3 +1,11 @@
+Sat, 22 Mar 2008 20:41:54 +0100 <thp@perli.net>
+Add "Visit website" menu items to channel and episode list; simple chan menu
+
+	* src/gpodder/gui.py: Add "Visit website" menu items to the context
+	menu of both the episode list and the channel navigator; also, make
+	the channel context menu easier to use by replacing the old
+	"Edit [Channelname]" and "Remove [Channelname]" items with stock items
+
 Sat, 22 Mar 2008 18:41:30 +0100 <thp@perli.net>
 Fix "Podcasts not being marked as new when synced to iPod" (#70)
 
